--- a/index.html
+++ b/index.html
@@ -170,16 +170,14 @@
                     <ul class="filter option-set" data-filter-group="color">
                         <li><a href="#filter-color-any" data-filter-value="" class="selected">ALL</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-
-
-
+                        </li>
+                        <li class="webstandard"><a href="#filter-color-webstandard"
+                                data-filter-value=".class">SCRIPT</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard"
+                                data-filter-value=".class">LAYOUT</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard"
+                                data-filter-value=".class">REFERENCE</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">SITE</a>
                         </li>
                     </ul>
                 </div>
@@ -318,16 +316,16 @@
                         <a href="class/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">CLASS</span>
-                                    <span class="overlay-text-thumb-donut">클래스</span>
-                                    <span class="overlay-text-thumb1-donut">클래스</span>
-                                    <span class="overlay-text-thumb2-donut">CLASS</span>
+                                    <span class="overlay-img-donut">SERCH</span>
+                                    <span class="overlay-text-thumb-donut">검색효과</span>
+                                    <span class="overlay-text-thumb1-donut">검색효과</span>
+                                    <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
                                 <img src="assets/img/svg-donut.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>CLASS</h5>
-                                    <p>클래스</p>
-                                    <span>CLASS</span>
+                                    <h5>SERCH</h5>
+                                    <p>검색효과</p>
+                                    <span>JAVASCRIPT</span>
                                 </div>
                             </div>
                         </a>
@@ -339,15 +337,15 @@
                         <a href="javascript/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">JAVASCRIPT</span>
-                                    <span class="overlay-text-thumb-donut">자바스크립트</span>
-                                    <span class="overlay-text-thumb1-donut">자바스크립트</span>
+                                    <span class="overlay-img-donut">QUIZ</span>
+                                    <span class="overlay-text-thumb-donut">퀴즈효과</span>
+                                    <span class="overlay-text-thumb1-donut">퀴즈효과</span>
                                     <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
                                 <img src="assets/img/svg-pizza.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>JAVASCRIPT</h5>
-                                    <p>자바스크립트</p>
+                                    <h5>QUIZ</h5>
+                                    <p>퀴즈효과</p>
                                     <span>JAVASCRIPT</span>
                                 </div>
                             </div>
@@ -368,8 +366,8 @@
                                 <img src="assets/img/svg-hotdog.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>HTML</h5>
-                                    <p>HTML</p>
-                                    <span>HTML</span>
+                                    <p>데이터효과</p>
+                                    <span>JAVASCRIPT</span>
                                 </div>
                             </div>
                         </a>
@@ -389,8 +387,8 @@
                                 <img src="assets/img/svg-grapes.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CSS</h5>
-                                    <p>CSS</p>
-                                    <span>CSS</span>
+                                    <p>마우스효과</p>
+                                    <span>JAVASCRIPT</span>
                                 </div>
                             </div>
                         </a>
@@ -410,8 +408,8 @@
                                 <img src="assets/img/svg-cherries.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>LAYOUT</h5>
-                                    <p>LAYOUT</p>
-                                    <span>LAYOUT</span>
+                                    <p>슬라이스효과</p>
+                                    <span>JAVASCRIPT</span>
                                 </div>
                             </div>
                         </a>
@@ -431,8 +429,26 @@
                                 <img src="assets/img/svg-cherries.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>SITE</h5>
-                                    <p>사이트 제작하기</p>
-                                    <span>SITE</span>
+                                    <p>패럴렉스효과</p>
+                                    <span>JAVASCRIPT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <section class="color-shape script">
+                        <a href="site/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">SITE</span>
+                                    <span class="overlay-text-thumb-donut">SITE</span>
+                                    <span class="overlay-text-thumb1-donut">사이트 제작하기</span>
+                                    <span class="overlay-text-thumb2-donut">SITE</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>SITE</h5>
+                                    <p>게임효과</p>
+                                    <span>JAVASCRIPT</span>
                                 </div>
                             </div>
                         </a>
