--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -66,12 +66,46 @@
                 <li><a href="#">05. 이벤트메서드 : addEventListener("mousedown") : 마우스버튼을 눌렀을때</a></li>
                 <li><a href="#">06. 이벤트메서드 : addEventListener("mouseup") : 마우스버튼을 떼는 경우</a></li>
                 <li><a href="#">07. 이벤트메서드 : addEventListener("mousemove") : 마우스 움직이는 경우</a></li>
+                <li><a href="#">07. 이벤트메서드 : addEventListener("mouseenter") : 마우스 위치해 있을 때</a></li>  
+                <li><a href="#">07. 이벤트메서드 : addEventListener("mouseleave") : 마우스 벗어 났을 때</a></li>
+                <li><a href="#">07. 이벤트메서드 : addEventListener("mouseover") : 마우스 위치해 있을 때</a></li>  
+                <li><a href="#">07. 이벤트메서드 : addEventListener("mouseout") : 마우스 벗어 났을 때</a></li>
+
                 <li><a href="#">04. 이벤트메서드 : addEventListener("drag") : 드래그 중인 경우</a></li>
                 <li><a href="#">04. 이벤트메서드 : addEventListener("dragstart") : 드래그 시작했울 때</a></li>
                 <li><a href="#">04. 이벤트메서드 : addEventListener("dragend") : 드래그 끝났을 때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("dragenter") : 드래그 중인 경우</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("dragover") : 드래그 시작했울 때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("dragleave") : 드래그 끝났을 때</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("drop") : 드래그 끝났을 때</a></li>
+
+
                 <li><a href="#">04. 이벤트메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
                 <li><a href="#">04. 이벤트메서드 : addEventListener("keypress") : 키 눌렀을 때()</a></li>
-                <li><a href="#">04. 이벤트메서드 : addEventListener("keydown") : 키 눌렀을 때(한번만 실행)</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("keyup") : 키 누르고 뗐을때</a></li>
+
+                li><a href="#">04. 이벤트메서드 : addEventListener("touchstart") : </a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("touchmove") :</a></li>
+                <li><a href="#">04. 이벤트메서드 : addEventListener("touchend") : </a></li>
+
+
+                
+                <li><a href="#">04. 이벤트 속성 : clientX : X 좌표의 값</a></li>
+                <li><a href="#">04. 이벤트 속성 : clientY:</a></li>
+                <li><a href="#">04. 이벤트 속성 : offsetX: </a></li> 
+                <li><a href="#">04. 이벤트 속성 : offsetY: </a></li>
+                <li><a href="#">04. 이벤트 속성 : pageX: 키 눌렀을 때()</a></li>
+                <li><a href="#">04. 이벤트 속성 : pageY: 키 누르고 뗐을때</a></li> 
+                <li><a href="#">04. 이벤트 속성 : screenX: 키 눌렀을 때(한번만 실행)</a></li>
+                <li><a href="#">04. 이벤트 속성 : screenY : 키 눌렀을 때()</a></li>
+
+                <li><a href="#">04. 이벤트 속성 : : </a></li> 
+                <li><a href="#">04. 이벤트 속성 : : 번만 실행)</a></li>
+                <li><a href="#">04. 이벤트 속성 : : </a></li>
+                <li><a href="#">04. 이벤트 속성 : : </a></li> 
+                <li><a href="#">04. 이벤트 속성 : : 번만 실행)</a></li>
+                <li><a href="#">04. 이벤트 속성 : : </a></li>
+                <li><a href="#">04. 이벤트 속성 : : </a></li>
             </ul>
         </div>
 
