--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -63,9 +63,18 @@
     </header>
     <!-- //headerType -->
 
-    <main id="main">
+    <main id="mainType">
       <section id="sliderType" class="slider__wrap">
-        <h2>슬라이드</h2>
+        <h2 class ="blind">슬라이드</h2>
+        <div class="slider__inner">
+            <div class="slider__arrow">
+                 <a href="#" class=""><span>이전이미지</span></href>
+                    <a href="#"><span>다음이미지</span></href>
+            </div>
+        <div class="slider__dot">
+
+        </div>
+        </div>
       </section>
       <!-- //sliderType -->
 
@@ -330,6 +339,10 @@
               </ul>
             </div>
           </div>
+        </div>
+        <div class="footer__right">
+          2022 palepinkday. Portfolio is Power<br />
+          All rights reserved.
         </div>
       </div>
     </footer>
