--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -37,7 +37,7 @@
                 <li><a href="effect/quizEffect.html">퀴즈효과</a></li>
                 <li><a href="effect/detaEffect.html">데이터 효과</a></li>
                 <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
+                <li><a href="effect/sliderEffect01.html">슬라이드효과</a></li>
                 <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
                 <li><a href="effect/gameEffect01.html">게임효과</a></li>
             </ul>
