--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -231,6 +231,11 @@
             </li>
             <li>
               <a href="#"
+                >01. 요소메서드 : 크기 위치 :doucument.documentElement:
+              </a>
+            </li>
+            <li>
+              <a href="#"
                 >01. 요소메서드 : 크기 위치 :window.scroll(): 스크롤값 설정()</a
               >
             </li>
