--- a/javascript/javascript07.html
+++ b/javascript/javascript07.html
@@ -57,18 +57,19 @@
     <main id="main">
       <div class="main_menu"></div>
       <ul>
-        <li><a href="#sampe">01. if문</a></li>
-        <li><a href="#sampe">02. </a></li>
-        <li><a href="#sampe">03</a></li>
-        <li><a href="#sampe">04</a></li>
-        <li><a href="#sampe">05</a></li>
-        <li><a href="#sampe">06</a></li>
-        <li><a href="#sampe">07</a></li>
-        <li><a href="#sampe">08</a></li>
-        <li><a href="#sampe">09</a></li>
-        <li><a href="#sampe">10</a></li>
-        <li><a href="#sampe">11. break문</a></li>
-        <li><a href="#sampe">12. continue문</a></li>
+        <li><a href="#sampe">01. 수학 메서드 : Math.round()</a></li>
+        <li><a href="#sampe">02. 수학 메서드 : Math.floor()</a></li>
+        <li><a href="#sampe">03. 수학 메서드 : Math.ceil()</a></li>
+        <li><a href="#sampe">04. 수학 메서드 : Math.max()</a></li>
+        <li><a href="#sampe">05. 수학 메서드 : Math.min()</a></li>
+        <li><a href="#sampe">06. 수학 메서드 : Math.abs()</a></li>
+        <li><a href="#sampe">08. 수학 메서드 : Math.trulc()</a></li>
+        <li><a href="#sampe">07. 수학 메서드 : Math.random()</a></li>
+        <li><a href="#sampe">08. 수학 메서드 : Math.()</a></li>
+        <li><a href="#sampe">09. 수학 메서드 : Math.()</a></li>
+        <li><a href="#sampe">10. 수학 메서드 : Math.()</a></li>
+        <li><a href="#sampe">11. 수학 메서드 : Math.()</a></li>
+        <li><a href="#sampe">12. 수학 메서드 : Math.()</a></li>
       </ul>
       <div class="main_script"></div>
       <div class="main_desc"></div>
