--- a/index.html
+++ b/index.html
@@ -525,6 +525,8 @@
                 </div>
               </a>
             </section>
+
+            <!-- box -->
             <section class="color-shape script">
               <a href="site/index.html" target="_blank">
                 <div class="image-wrap">
@@ -538,6 +540,49 @@
                   <div class="img-text donutImg">
                     <h5>GAME</h5>
                     <p>게임효과</p>
+                    <span>JAVASCRIPT</span>
+                  </div>
+                </div>
+              </a>
+            </section>
+            <!-- //box -->
+
+            <!-- box -->
+            <section class="color-shape script">
+              <a href="site/index.html" target="_blank">
+                <div class="image-wrap">
+                  <div class="hover-wrap">
+                    <span class="overlay-img-donut">animation</span>
+                    <span class="overlay-text-thumb-donut">애니메이션</span>
+                    <span class="overlay-text-thumb1-donut">애니메이션</span>
+                    <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
+                  </div>
+                  <img src="assets/img/svg-cheeseburger.svg" alt="portfolio" />
+                  <div class="img-text donutImg">
+                    <h5>animation</h5>
+                    <p>애니메이션</p>
+                    <span>JAVASCRIPT</span>
+                  </div>
+                </div>
+              </a>
+            </section>
+            <!-- //box -->
+            <!-- box -->
+            <section class="color-shape script">
+              <a href="site/index.html" target="_blank">
+                <div class="image-wrap">
+                  <div class="hover-wrap">
+                    <span class="overlay-img-donut">css animation</span>
+                    <span class="overlay-text-thumb-donut">css애니메이션</span>
+                    <span class="overlay-text-thumb1-donut">css애니메이션</span>
+                    <span class="overlay-text-thumb2-donut"
+                      >csasJAVASCRIPT</span
+                    >
+                  </div>
+                  <img src="assets/img/svg-cheeseburger.svg" alt="portfolio" />
+                  <div class="img-text donutImg">
+                    <h5>css animation</h5>
+                    <p>css애니메이션</p>
                     <span>JAVASCRIPT</span>
                   </div>
                 </div>
