--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -13,17 +13,18 @@
     />
     <style>
       /* mouseType */
-
       .mouse__wrap {
-        width: 100px;
+        width: 100%;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        color: #fff;
         overflow: hidden;
         cursor: none;
       }
+
       .mouse__wrap p {
         font-size: 2vw;
         line-height: 2;
@@ -34,65 +35,66 @@
         font-size: 3vw;
         font-weight: 300;
       }
+
       .mouse__wrap p span {
-        border-bottom: 0.15vw dashed olivedrab;
-        color: olivedrab;
+        border-bottom: 0.15vw dashed orange;
+        color: orange;
       }
-      @media (max-width: 800px) {
-        .mouse__wrap p {
-          padding: 0 20px;
-          font-size: 24px;
-          line-height: 1.5;
-          text-align: center;
-          word-break: keep-all;
-        }
-        .mouse__wrap p:last-child {
-          font-size: 40px;
-        }
-      }
+
       .mouse__cursor {
         position: absolute;
-        left: 0t 0;
+        left: 0;
+        top: 0;
         width: 50px;
         height: 50px;
         border-radius: 50%;
         border: 3px solid #fff;
         background-color: rgba(255, 255, 255, 0.1);
-
-        /* 선택클릭 */
         user-select: none;
         pointer-events: none;
-        transition: ;
+        /* perspective: 400px;
+            transform-style: preserve-3d; */
+        transition: background-color 0.3s, border-color 0.3s, transform 0.6s,
+          border-radius 0.6s;
       }
+
       .mouse__cursor.style1 {
-        background-color: rgb(250, 8, 8);
-        border-color: rgb(161, 45, 45);
-      }
-      .mouse__cursor.style2 {
-        background-color: rgb(117, 250, 8);
-        border-color: rgb(88, 161, 45);
+        background-color: rgba(255, 165, 0, 0.4);
+        border-color: orange;
         transform: scale(2) rotateY(720deg);
       }
+
+      .mouse__cursor.style2 {
+        background-color: rgba(140, 0, 255, 0.4);
+        border-color: rgb(140, 0, 255);
+        transform: scale(1.5) rotateX(545deg);
+      }
+
       .mouse__cursor.style3 {
-        background-color: rgb(60, 8, 250);
-        border-color: rgb(45, 105, 161);
-        transform: scale(1.5) rotateY(545deg);
-      }
-      .mouse__cursor.style4 {
-        background-color: rgb(241, 16, 174);
-        border-color: rgb(161, 45, 136);
-        transform: scale(10);
-      }
-      .mouse__cursor.style5 {
-        background-color: rgb(8, 173, 250);
-        border-color: rgb(45, 109, 161);
+        background-color: rgba(0, 47, 255, 0.4);
+        border-color: rgb(0, 47, 255);
         transform: scale(0.1);
       }
-      .mouse__cursor.style6 {
-        background-color: rgb(250, 234, 8);
-        border-color: rgb(161, 153, 45);
+
+      .mouse__cursor.style4 {
+        background-color: rgba(0, 47, 255, 0.4);
+        border-color: rgb(0, 47, 255);
+        transform: scale(10);
+      }
+
+      .mouse__cursor.style5 {
+        background-color: rgba(255, 0, 85, 0.4);
+        border-color: rgb(255, 0, 85);
         transform: scale(5) skew(40deg);
       }
+
+      .mouse__cursor.style6 {
+        background-color: rgba(255, 81, 0, 0.4);
+        border-color: rgb(255, 81, 0);
+        transform: scale(5);
+        border-radius: 0;
+      }
+
       .mouse__info {
         position: absolute;
         left: 20px;
@@ -100,6 +102,21 @@
         font-size: 14px;
         line-height: 1.6;
         color: #fff;
+      }
+      @media (max-width: 800px) {
+        .mouse__wrap p {
+          padding: 0 20px;
+          font-size: 20px;
+          line-height: 1.5;
+          text-align: center;
+          margin-bottom: 10px;
+        }
+        .mouse__wrap p:last-child {
+          font-size: 40px;
+          line-height: 1.5;
+          text-align: center;
+          word-break: keep-all;
+        }
       }
     </style>
   </head>
@@ -123,12 +140,17 @@
         <div class="mouse__cursor"></div>
         <div class="mouse__wrap">
           <p>
-            <span class="style1">가능해 보이는것 혹은 타당해 보이는 것만 </span
-            >선택한다면 <span class="style2">진리는</span
-            ><span class="style3">진짜</span>
-            <span>스스로가 진정 원하는 것을</span
-            ><span>알 수 없고 타협만 남는다..</span>
+            <span class="style1">가능해 보이는 것</span><br />
+            <span> 혹은 </span><br />
+            <span>타당해 보이는 것</span>만<br />
+            선택한다면 <br />스스로가
+            <span class="style2"> 진정 원하는 것</span>을<br />
+            <span class="style3"
+              >알 수 없고 <br />
+              타협만 남는다..</span
+            >
           </p>
+
           <p>
             If
             <span class="style1"></span><span></span><span class="style2"></span
@@ -139,13 +161,13 @@
       <div class="mouseInfo">
         <ul>
           <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
-          <li>clientX : <span class="clientX">0</span>px</li>
+          <li>clientY : <span class="clientY">0</span>px</li>
+          <li>offsetX : <span class="offsetX">0</span>px</li>
+          <li>offsetY : <span class="offsetY">0</span>px</li>
+          <li>pageX : <span class="pageX">0</span>px</li>
+          <li>pageY : <span class="pageY">0</span>px</li>
+          <li>screenX : <span class="screenX">0</span>px</li>
+          <li>screenY : <span class="screenY">0</span>px</li>
         </ul>
       </div>
     </main>
@@ -387,67 +409,67 @@
              document.querySelector("screenX").innerText = event.screenX;
              document.querySelector("screenY").innerText = event.screenY;
            });
-
+           const cursor = document.querySelector(".mouse__cursor");
            window.addEventListener("mousemove", (e) => {
-             const cursor = document.querySelector(".mouse__cursor");
              cursor.style.left = e.clientX - 25 + "px";
              cursor.style.top = e.clientY - 25 + "px";
            });
 
-           document.querySelector(".style1").addEventListener("mouseover", () => {
-             cursor.classList.add(".style1");
-           });
-           document.querySelector(".style1").addEventListener("mouseout", () => {
-             cursor.classList.add(".style1");
-           });
-           document.querySelector(".style2").addEventListener("mouseover", () => {
-             cursor.classList.remove(".style2");
-           });
-           document.querySelector(".style2").addEventListener("mouseout", () => {
-             cursor.classList.remove(".style2");
-           });
-           document.querySelector(".style3").addEventListener("mouseover", () => {
-             cursor.classList.add(".style3");
-           });
-           document.querySelector(".style3").addEventListener("mouseout", () => {
-             cursor.classList.add(".style3");
-           });
-           document.querySelector(".style4").addEventListener("mouseover", () => {
-             cursor.classList.remove(".style4");
-           });
-           document.querySelector(".style4").addEventListener("mouseout", () => {
-             cursor.classList.remove(".style4");
-           });
-           document.querySelector(".style5").addEventListener("mouseover", () => {
-             cursor.classList.add(".style5");
-           });
-           document.querySelector(".style5").addEventListener("mouseout", () => {
-             cursor.classList.add(".style5");
-           });
-           document.querySelector(".style6").addEventListener("mouseover", () => {
-             cursor.classList.remove(".style6");
-           });
-           document.querySelector(".style6").addEventListener("mouseout", () => {
-             cursor.classList.remove(".style6");
-           });
+          //  document.querySelector(".style1").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style1");
+          //  });
+          //  document.querySelector(".style1").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style1");
+          //  });
+          //  document.querySelector(".style2").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style2");
+          //  });
+          //  document.querySelector(".style2").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style2");
+          //  });
+          //  document.querySelector(".style3").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style3");
+          //  });
+          //  document.querySelector(".style3").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style3");
+          //  });
+          //  document.querySelector(".style4").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style4");
+          //  });
+          //  document.querySelector(".style4").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style4");
+          //  });
+          //  document.querySelector(".style5").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style5");
+          //  });
+          //  document.querySelector(".style5").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style5");
+          //  });
+          //  document.querySelector(".style6").addEventListener("mouseover", () => {
+          //    cursor.classList.add(".style6");
+          //  });
+          //  document.querySelector(".style6").addEventListener("mouseout", () => {
+          //    cursor.classList.remove(".style6");
+          //  });
 
            //for문
-           for (i = 0; i <=5; i++) {
-             document
-               .querySelector(".style" + i)
-               .addEventListener("mouseover", () => {
-                 cursor.classList.add(".style" + i);
-               });
-             document
-               .querySelector(".style" + i)
-               .addEventListener("mouseout", () => {
-                 cursor.classList.remove(".style" + i);
-               });
-           }
+           // for (i = 0; i <=5; i++) {
+           //   document
+           //     .querySelector(".style" + i)
+           //     .addEventListener("mouseover", () => {
+           //       cursor.classList.add(".style" + i);
+           //     });
+           //   document
+           //     .querySelector(".style" + i)
+           //     .addEventListener("mouseout", () => {
+           //       cursor.classList.remove(".style" + i);
+           //     });
+           // }
 
+
+           // const mouseStyle = document.querySelectorAll(".mouse__wrap .style")
            //forEach문
-           num = [1, 2, 3, 4, 5, 6];
-           num.forEach((el) => {
+           forEach((el) => {
              document
                .querySelector(".style" + el)
                .addEventListener("mouseover", () => {
