--- a/site/webd/index.html
+++ b/site/webd/index.html
@@ -78,7 +78,7 @@
           <ul>
             <li class="active">
               <a href="#">롯데월드 소식</a>
-              <ul class="'clearfix">
+              <ul class="clearfix">
                 <li>
                   <a href="#"
                     >1. 첫번째 목록입니다.첫번째 목록입니다.첫번째
