--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -45,7 +45,7 @@
     <header id="headerType" class="header__wrap nexon">
       <div class="header__inner">
         <div class="header__logo">
-          <a href="#">web <em>site</em></a>
+          <a href="#">WEB<em>SITE</em></a>
         </div>
         <nav class="header__menu">
           <ul>
@@ -67,6 +67,7 @@
       <section id="sliderType" class="slider__wrap">
         <h2 class ="blind">슬라이드</h2>
         <div class="slider__inner">
+          <img class="slider__img" src="assets/img/slider_bg01.jpg" alt="">
             <div class="slider__arrow">
                  <a href="#" class=""><span>이전이미지</span></href>
                     <a href="#"><span>다음이미지</span></href>
