--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -27,6 +27,18 @@
     <link rel="stylesheet" href="assets/css/text.css" />
     <link rel="stylesheet" href="assets/css/imgText.css" />
     <link rel="stylesheet" href="assets/css/banner.css" />
+
+    <style>
+      #headerType
+      #sliderType
+      #mainType
+      #imgTextType
+      #cardType
+      #bannerType
+      #
+
+   
+    </style>
   </head>
 
   <body>
